--- a/charts/ethadapter/values.yaml
+++ b/charts/ethadapter/values.yaml
@@ -7,16 +7,16 @@ replicaCount: 1
 
 image:
   # -- The repository of the container image
-  repository: "pharmaledger/ethadapter"
+  repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/ethadapter"
   # -- Image Pull Policy
   pullPolicy: Always
   # -- Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.2"
+  tag: "1.0.7-rc1"
   # -- sha256 digest of the image.
   # Do not add the prefix "@sha256:"
   # Default to image digest for version 1.0.2
   # <!-- # pragma: allowlist secret -->
-  sha: "e387f4b292fff25f6d7fa1792ec586bf46cab31265a84136561c469accd81b06"  # pragma: allowlist secret
+  sha: "8faa8f511b8d0e7dec9bef21091c524ce849e9709a5cc3a7fe7d5b37490fc310"  # pragma: allowlist secret
 
 # -- Secret(s) for pulling an container image from a private registry.
 # See [https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
