--- a/charts/epi/Chart.yaml
+++ b/charts/epi/Chart.yaml
@@ -16,7 +16,7 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 
-version: 0.5.15
+version: 0.6.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -26,5 +26,5 @@ appVersion: "2023.0.1"
 icon: https://avatars.githubusercontent.com/u/60230259?s=200&v=4
 
 maintainers:
-  - name: tgip-work
-    url: https://github.com/tgip-work
+  - name: skutner
+    url: https://github.com/skutner
