--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -76,17 +76,17 @@ config:
 runner:
   image:
     # -- The repository of the container image for the runner
-    repository: "pharmaledger/epi-runner"
+    repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/epi-runner"
     # -- Image Pull Policy for the runner
     pullPolicy: Always
     # -- Overrides the image tag whose default is the chart appVersion.
     # Default to v1.3.1
-    tag: "1.3.1"  # Note to developers: If you change this version also change appVersion in Chart.yaml
+    tag: "2023.0.4-rc1"  # Note to developers: If you change this version also change appVersion in Chart.yaml
     # -- sha256 digest of the image.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "d9613cbf530cf057a3a1a781ff81b491e03a2d0194165a0045bee37c1c6c57da"  # pragma: allowlist secret
+    sha: "d6cb807c729461a93a8e20fb88004334c13ca3748d8d1f9af736d7430c60c53a"  # pragma: allowlist secret
 
   # -- The number of replicas for the runner
   replicaCount: 1
@@ -172,17 +172,17 @@ builder:
   ttlSecondsAfterFinished: 600
   image:
     # -- The repository of the container image for the builder.
-    repository: "pharmaledger/epi-builder"
+    repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/epi-builder"
     # -- Image Pull Policy for the builder.
     pullPolicy: Always
     # -- Image tag for the builder.
     # Default to v1.3.1
-    tag: "1.3.1"
+    tag: "2023.0.4-rc1"
     # -- sha256 digest of the image for the builder.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "7756930eecac2364ba66d052839bab512dbc5f423671c13aa5e368b313f61f60"  # pragma: allowlist secret
+    sha: "c066023727de32d5768bedb6ae2b7d8f68f5f189649707e2b83fec04b96eb7e1"  # pragma: allowlist secret
 
   # -- Pod Security Context for the builder.
   # See [https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod)
@@ -298,7 +298,7 @@ persistence:
   # If empty or not set then storage class will not be set - which means that the default storage class will be used.
   storageClassName: ""
   # -- Size of the volume for the new PVC
-  size: "20Gi"
+  size: "100Gi"
   # -- Boolean flag whether to delete the (new) PVC on uninstall or not.
   deleteOnUninstall: true
   # -- Finalizers for the new PVC.
