--- a/charts/ethadapter/Chart.yaml
+++ b/charts/ethadapter/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.7.10
+version: 0.7.11
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,5 +25,5 @@ appVersion: "1.0.2"
 icon: https://avatars.githubusercontent.com/u/60230259?s=200&v=4
 
 maintainers:
-  - name: tgip-work
-    url: https://github.com/tgip-work
+  - name: skutner
+    url: https://github.com/skutner
