--- a/charts/ethadapter/values.yaml
+++ b/charts/ethadapter/values.yaml
@@ -11,12 +11,12 @@ image:
   # -- Image Pull Policy
   pullPolicy: Always
   # -- Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.7-rc1"
+  tag: "1.0.7"
   # -- sha256 digest of the image.
   # Do not add the prefix "@sha256:"
   # Default to image digest for version 1.0.2
   # <!-- # pragma: allowlist secret -->
-  sha: "8faa8f511b8d0e7dec9bef21091c524ce849e9709a5cc3a7fe7d5b37490fc310"  # pragma: allowlist secret
+  sha: "5ed4cc6afce9dae81046be82c73ab3b262bc83f14a1078f675e3b8f4cb2b131b"  # pragma: allowlist secret
 
 # -- Secret(s) for pulling an container image from a private registry.
 # See [https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
