--- a/charts/ethadapter/values.yaml
+++ b/charts/ethadapter/values.yaml
@@ -223,7 +223,7 @@ affinity: {}
 # See [https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/](https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/)
 livenessProbe:
   tcpSocket:
-    port: http
+    port: 3000
   initialDelaySeconds: 10
   periodSeconds: 10
   timeoutSeconds: 1
@@ -235,14 +235,13 @@ livenessProbe:
 # See [https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/](https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/)
 readinessProbe:
   httpGet:
-    path: /totalNumberOfAnchors/
-    port: http
+    path: /health
+    port: 3000
   initialDelaySeconds: 10
   periodSeconds: 10
   timeoutSeconds: 3
   successThreshold: 1
   failureThreshold: 3
-
 # -- An array of extra resources that will be deployed.
 # This is useful e.g. for NetworkPolices
 extraResources:
