updated images repo

--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -81,12 +81,12 @@ runner:
     pullPolicy: Always
     # -- Overrides the image tag whose default is the chart appVersion.
     # Default to v1.3.1
-    tag: "2023.0.4-rc1"  # Note to developers: If you change this version also change appVersion in Chart.yaml
+    tag: "2023.0.4"  # Note to developers: If you change this version also change appVersion in Chart.yaml
     # -- sha256 digest of the image.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "d6cb807c729461a93a8e20fb88004334c13ca3748d8d1f9af736d7430c60c53a"  # pragma: allowlist secret
+    sha: "87767566b48971cc31e998c8cd235ccc0ca5bd2a77da1deb1e4448608bb98915"  # pragma: allowlist secret
 
   # -- The number of replicas for the runner
   replicaCount: 1
@@ -177,12 +177,12 @@ builder:
     pullPolicy: Always
     # -- Image tag for the builder.
     # Default to v1.3.1
-    tag: "2023.0.4-rc1"
+    tag: "2023.0.4"
     # -- sha256 digest of the image for the builder.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "c066023727de32d5768bedb6ae2b7d8f68f5f189649707e2b83fec04b96eb7e1"  # pragma: allowlist secret
+    sha: "299f90ae491bf69811befd6410ea714457be968eb52431e7d8770b3c791f5dad"  # pragma: allowlist secret
 
   # -- Pod Security Context for the builder.
   # See [https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod)
