--- a/.github/workflows/detect_secrets.yaml
+++ b/.github/workflows/detect_secrets.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: detect-secrets
         uses: reviewdog/action-detect-secrets@d248ce8b83ee2d3fdc01df94bc64312d428665ae # https://github.com/reviewdog/action-detect-secrets/releases/tag/v0.7.0
         with:
-          GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           # see https://github.com/Yelp/detect-secrets
           # https://github.com/reviewdog/action-detect-secrets/issues/16
           detect_secrets_flags: |-
