--- a/.github/workflows/detect_secrets.yaml
+++ b/.github/workflows/detect_secrets.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
+      - uses: actions/checkout@v3 # v2.4.0
         name: Checkout
 
       # https://github.com/reviewdog/action-detect-secrets - works for pull requests only
