--- a/.github/workflows/detect_secrets.yaml
+++ b/.github/workflows/detect_secrets.yaml
@@ -16,7 +16,7 @@ jobs:
 
       # https://github.com/reviewdog/action-detect-secrets - works for pull requests only
       - name: detect-secrets
-        uses: reviewdog/action-detect-secrets@d248ce8b83ee2d3fdc01df94bc64312d428665ae # https://github.com/reviewdog/action-detect-secrets/releases/tag/v0.7.0
+        uses: reviewdog/action-detect-secrets@master
         with:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           # see https://github.com/Yelp/detect-secrets
