--- a/charts/quorum-node/templates/post-upgrade.propose-validators.yaml
+++ b/charts/quorum-node/templates/post-upgrade.propose-validators.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.use_case.updatePartnersInfo.enabled }}
+{{- if  and  .Values.use_case.updatePartnersInfo.enabled .Values.use_case.promoteValidators.enabled }}
 ---
 apiVersion: batch/v1
 kind: Job
