added flag to prevent promotion to validator of a quorum node

--- a/charts/quorum-node/values.yaml
+++ b/charts/quorum-node/values.yaml
@@ -139,6 +139,11 @@ use_case:
         ]
       }
 
+  promoteValidators:
+  # -- Enable post update job for promoting all peers listed in updatePartnersInfo to be promoted to validators
+  # Default false
+    enabled: false
+
 # Persistence using Persistent Volume Claims
 # See [http://kubernetes.io/docs/user-guide/persistent-volumes/](http://kubernetes.io/docs/user-guide/persistent-volumes/)
 persistence:
