updated helm repo

--- a/ct.yaml
+++ b/ct.yaml
@@ -4,6 +4,6 @@ target-branch: master
 chart-dirs:
   - charts
 chart-repos:
-  - pharmaledgerassoc=https://pharmaledgerassoc.github.io/helm-charts
+  - axiologic-pla=https://axiologic-pla.github.io/helm-charts
 helm-extra-args: --timeout 600s
 validate-maintainers: false
