--- a/charts/quorum-node/Chart.yaml
+++ b/charts/quorum-node/Chart.yaml
@@ -20,5 +20,5 @@ version: 0.6.7
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
+# It is recommended to use it with quotes
 appVersion: "23.4.0"
