--- a/charts/quorum-node/templates/deployment.yaml
+++ b/charts/quorum-node/templates/deployment.yaml
@@ -136,6 +136,8 @@ spec:
                 --permissioned \
                 --nat=none \
                 --verbosity {{ .Values.quorum.log.verbosity }} \
+                --allow-insecure-unlock \
+                --vmdebug
             {{- if .Values.quorum.log.emitcheckpoints }}
                 --emitcheckpoints \
             {{- end }}
