--- a/charts/epi/templates/leaflet-reader-deployment.yaml
+++ b/charts/epi/templates/leaflet-reader-deployment.yaml
@@ -83,7 +83,7 @@ spec:
             mountPath: /ePI-workspace/apihub-root/external-volume/config/bdns.hosts
             subPath: bdns.hosts
             readOnly: true
-          - name: epi-secret-volume
+          - name: leaflet-reader-secret-volume
             mountPath: /ePI-workspace/env.json
             subPath: env.json
             readOnly: true
