--- a/charts/ethadapter/values.yaml
+++ b/charts/ethadapter/values.yaml
@@ -8,16 +8,16 @@ replicaCount: 1
 image:
   # -- The repository of the container image
   # <!-- # pragma: allowlist secret -->
-  repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/ethadapter"  # pragma: allowlist secret
+  repository: "pharmaledger/ethadapter"  # pragma: allowlist secret
   # -- Image Pull Policy
   pullPolicy: Always
   # -- Overrides the image tag whose default is the chart appVersion.
-  tag: "1.1.0"
+  tag: "1.1.1"
   # -- sha256 digest of the image.
   # Do not add the prefix "@sha256:"
   # Default to image digest for version 1.0.2
   # <!-- # pragma: allowlist secret -->
-  sha: "d8470b4772cc55cd1dae71f28b83c70ed4ac3ffc9027236b3061292af7af32b2"  # pragma: allowlist secret
+  sha: "c7702fb494db2d547e5cd7de3b042a586ff2b09c610f834461f9a63c91a7e88c"  # pragma: allowlist secret
 
 # -- Secret(s) for pulling an container image from a private registry.
 # See [https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
