--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -25,7 +25,7 @@ config:
   # -- Enable standalone dsu-fabric (for version >= 3.0.0)
   fabricEnabled: "false"
   # -- The epi version
-  epiVersion: "3.0.0"
+  epiVersion: "3.0.0-rc28"
   overrides:
     # -- Option to explicitly override the environment.js file used for demiurge-wallet instead of using the predefined template.
     # Note: Usually not required
@@ -85,17 +85,17 @@ runner:
   image:
     # -- The repository of the container image for the runner
     # <!-- # pragma: allowlist secret -->
-    repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/epi-runner"  # pragma: allowlist secret
+    repository: "pharmaledger/epi-runner"  # pragma: allowlist secret
     # -- Image Pull Policy for the runner
     pullPolicy: Always
     # -- Overrides the image tag whose default is the chart appVersion.
     # Default to v1.3.1
-    tag: "2023.1.0"  # Note to developers: If you change this version also change appVersion in Chart.yaml
+    tag: "3.0.0-rc28"  # Note to developers: If you change this version also change appVersion in Chart.yaml
     # -- sha256 digest of the image.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "407dad9208fd36aca61c76cca7bdca6ba4ce97552e783064c4d8e98be1ceb36c"  # pragma: allowlist secret
+    sha: "5ea9a0857d243700872c29866bd68662ec3e246718ba88d2b5e3fbe453864d4b"  # pragma: allowlist secret
 
   # -- Annotations added to the runner pod
   podAnnotations: {}
@@ -179,17 +179,17 @@ builder:
   image:
     # -- The repository of the container image for the builder.
     # <!-- # pragma: allowlist secret -->
-    repository: "061089524335.dkr.ecr.eu-west-1.amazonaws.com/epi-builder"  # pragma: allowlist secret
+    repository: "pharmaledger/epi-builder"  # pragma: allowlist secret
     # -- Image Pull Policy for the builder.
     pullPolicy: Always
     # -- Image tag for the builder.
     # Default to v1.3.1
-    tag: "2023.1.0"
+    tag: "3.0.0-rc28"
     # -- sha256 digest of the image for the builder.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "e5bc197b1fc44925b1ff9e9a2cc04831eaa708e87a2ca1d8b7790631f1372776"  # pragma: allowlist secret
+    sha: "7013b176c84e3e06266e12579a371139a6c22f1ca80fb82753c453fb752d981d"  # pragma: allowlist secret
 
   # -- Pod Security Context for the builder.
   # See [https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod)
