--- a/charts/epi/templates/ingress-public.yaml
+++ b/charts/epi/templates/ingress-public.yaml
@@ -15,7 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ $fullName }}-public
   namespace: {{ template "epi.namespace" . }}
   labels:
     {{- include "epi.labels" . | nindent 4 }}
