Remove secretProviderClass from leaflet-reader-deployment.yaml
The conditional block for secretProviderClass was removed from the leaflet-reader-deployment.yaml file. Now, the code only involves the "secret" block, making it more straightforward and focused mainly on the necessary secrets required for the deployment. The update also involves several changes like updating the chart's version and adjusting related documentation.

--- a/charts/epi/templates/leaflet-reader-deployment.yaml
+++ b/charts/epi/templates/leaflet-reader-deployment.yaml
@@ -115,17 +115,9 @@ spec:
             defaultMode: 0400
         {{- end }}
         - name: leaflet-reader-secret-volume
-        {{- if .Values.secretProviderClass.enabled }}
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: leaflet-reader-secret
-        {{- else }}
           secret:
-            secretName: {{ include "epi.fullname" . }}
+            secretName: leaflet-reader-secret
             defaultMode: 0400
-        {{- end }}
         - name: epi-bdns-config-volume
           configMap:
             name: {{ include "epi.fullname" . }}-bdns
