Change server startup process in job-builder.yaml
The server startup procedure in job-builder.yaml has been modified to ensure the server is ready before starting the build process. Instead of relying on a fixed sleep time, it now waits for a defined "ready" message in the server logs before proceeding. The logs are captured and checked continuously to allow immediate build start post server readiness.

--- a/charts/epi/templates/job-builder.yaml
+++ b/charts/epi/templates/job-builder.yaml
@@ -88,11 +88,15 @@ spec:
             echo "=======> Not build yet!"
             echo "=======> Starting application in background process ..."
             export ENABLE_SSO=false
-            npm run server &
-            server_pid=$!
+            tail -f server.log &
+            npm run server > server.log 2>&1 &
+            server_pid=$
             echo "=======> Application running in background with PID=$server_pid"
-            echo "=======> Sleeping for {{ .Values.builder.sleepTime }} ..."
-            sleep {{ .Values.builder.sleepTime }}
+            SEARCH_STRING="ready to receive requests"
+            while ! grep -q "$SEARCH_STRING" server.log; do
+              sleep {{ .Values.builder.sleepTime }}
+            done
+            echo "=======> Server is ready."
             echo "=======> Starting build process ..."
             node ./node_modules/octopus/scripts/setEnv --file=../../../env.json "node ./bin/octopusRun.js epi-ssapps-and-wallets-build"
             node ./node_modules/octopus/scripts/setEnv --file=../../../env.json "node ./node_modules/octopus/scripts/run patch"
