Update epi chart version and modify several config variables
The commit updates the version of epi chart from 0.8.6 to 0.8.7 along with modifying several Helm configurations. The changes include an update of env.json name in leaflet-reader-deployment.yaml. Also, the removal of certain sections in _helpers.tpl and _secret.tpl to streamline the epi chart configuration.

--- a/charts/epi/templates/leaflet-reader-deployment.yaml
+++ b/charts/epi/templates/leaflet-reader-deployment.yaml
@@ -83,7 +83,7 @@ spec:
             mountPath: /ePI-workspace/apihub-root/external-volume/config/bdns.hosts
             subPath: bdns.hosts
             readOnly: true
-          - name: leaflet-reader-secret-volume
+          - name: epi-secret-volume
             mountPath: /ePI-workspace/env.json
             subPath: env.json
             readOnly: true
