--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,11 +6,13 @@
 name: Release Charts
 
 on:
-  push:
-    branches:
-      - master
-      - main
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch name'
+        required: true
+        type: string
+        default: master
 
 jobs:
   release:
@@ -18,6 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
         name: Checkout
+        ref: ${{ inputs.branch }}
         with:
           fetch-depth: 0
 
