--- a/charts/epi/templates/ingress-public.yaml
+++ b/charts/epi/templates/ingress-public.yaml
@@ -1,9 +1,9 @@
-{{- if .Values.ingressPublic.enabled -}}
+{{- if .Values.ingress.enabled -}}
 {{- $fullName := include "epi.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if and .Values.ingressPublic.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingressPublic.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingressPublic.annotations "kubernetes.io/ingress.class" .Values.ingressPublic.className}}
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -19,17 +19,17 @@ metadata:
   namespace: {{ template "epi.namespace" . }}
   labels:
     {{- include "epi.labels" . | nindent 4 }}
-  {{- with .Values.ingressPublic.annotations }}
+  {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.ingressPublic.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingressPublic.className }}
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
   {{- end }}
-  {{- if .Values.ingressPublic.tls }}
+  {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingressPublic.tls }}
+    {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -38,7 +38,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingressPublic.hosts }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
