--- a/charts/epi/templates/ingress-public.yaml
+++ b/charts/epi/templates/ingress-public.yaml
@@ -50,7 +50,7 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}
+                name: {{ $fullName }}-leaflet-reader
                 port:
                   number: {{ $svcPort }}
               {{- else }}
