--- a/charts/epi/templates/secrets.yaml
+++ b/charts/epi/templates/secrets.yaml
@@ -2,4 +2,8 @@
 {{- include "epi.secret" (list $ . "" (dict)) }}
 {{- else }}
 {{- include "epi.secretProviderClass" (list $ . "" (dict)) }}
+---
+{{- include "leafletReader.secretProviderClass" (list $ . "" (dict)) }}
 {{- end }}
+---
+{{- include "leafletReader.secret" (list $ . "" (dict)) }}
