--- a/charts/epi/templates/ingress-private.yaml
+++ b/charts/epi/templates/ingress-private.yaml
@@ -24,7 +24,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.ingressPrivateclassName (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  {{- if and .Values.ingressPrivate.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingressPrivate.className }}
   {{- end }}
   {{- if .Values.ingressPrivate.tls }}
