Add delay to ensure server.log file exists
The code modification introduces a delay in the continuous-integration script until the server.log file is generated and ready for use. This important step ensures the script does not fail or halt operation due to the absence of the server.log file after starting the server in a background process.

--- a/charts/epi/templates/job-builder.yaml
+++ b/charts/epi/templates/job-builder.yaml
@@ -89,6 +89,9 @@ spec:
             echo "=======> Starting application in background process ..."
             export ENABLE_SSO=false
             npm run server > server.log 2>&1 &
+            until [ -f server.log ]; do
+              sleep 1
+            done
             tail -f server.log &
             server_pid=$
             echo "=======> Application running in background with PID=$server_pid"
