--- a/charts/epi/templates/ingress-public.yaml
+++ b/charts/epi/templates/ingress-public.yaml
@@ -58,5 +58,22 @@ spec:
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
+          {{- range .paths_extra }}
+          - path: {{ .path }}
+            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+            pathType: {{ .pathType }}
+            {{- end }}
+            backend:
+              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+              {{- else }}
+              serviceName: {{ $fullName }}
+              servicePort: {{ $svcPort }}
+              {{- end }}
+          {{- end }}
+          {{- end }}
     {{- end }}
 {{- end }}
