changes on ingress add /metadata

--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -445,6 +445,18 @@ ingress:
           # See [https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types](https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types)
           # and [https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/](https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/)
           pathType: ImplementationSpecific
+
+        -
+          # -- The Ingress Path. See [https://kubernetes.io/docs/concepts/services-networking/ingress/#examples](https://kubernetes.io/docs/concepts/services-networking/ingress/#examples)
+          # <br/>
+          # Note: For Ingress Controllers like AWS LB Controller see their specific documentation.
+          path: /metadata/*
+          # -- The type of path. This value is required since Kubernetes 1.18.
+          # <br/>
+          # For Ingress Controllers like AWS LB Controller or Traefik it is usually required to set its value to ImplementationSpecific
+          # See [https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types](https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types)
+          # and [https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/](https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/)
+          pathType: ImplementationSpecific
   tls: []
 
 # Ingress settings for the runner
