TRUST-366 - add ingress path

--- a/charts/epi/Chart.yaml
+++ b/charts/epi/Chart.yaml
@@ -21,6 +21,6 @@ version: 0.7.10
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "3.0.0-rc28"
+appVersion: "4.0.0-rc"
 
 icon: https://avatars.githubusercontent.com/u/60230259?s=200&v=4
