--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -73,6 +73,8 @@ config:
     # 4. Add these values to "skipOAuth": "/leaflet-wallet/", "/directory-summary/", "/iframe/"
     apihubJson: ""
 
+    readOnlyApihubJson: ""
+
     # -- Centrally managed and provided BDNS Hosts Config.
     # You must set this value in a non-sandbox environment!
     # See [templates/_configmap-bdns.tpl](templates/_configmap-bdns.tpl) for default value.
