--- a/charts/epi/Chart.yaml
+++ b/charts/epi/Chart.yaml
@@ -17,10 +17,10 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 
 
-version: 0.7.11-rc4
+version: 0.7.11
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "4.0.0-rc4"
+appVersion: "4.0.0"
 
 icon: https://avatars.githubusercontent.com/u/60230259?s=200&v=4
