--- a/charts/epi/values.yaml
+++ b/charts/epi/values.yaml
@@ -23,7 +23,7 @@ config:
   # -- Enable Dev mode
   dev: "false"
   # -- The epi version
-  epiVersion: "3.0.0"
+  epiVersion: "4.0.0"
   overrides:
     # -- Option to explicitly override the environment.js file used for demiurge-wallet instead of using the predefined template.
     # Note: Usually not required
@@ -73,6 +73,8 @@ config:
     # 4. Add these values to "skipOAuth": "/leaflet-wallet/", "/directory-summary/", "/iframe/"
     apihubJson: ""
 
+    readOnlyApihubJson: ""
+
     # -- Centrally managed and provided BDNS Hosts Config.
     # You must set this value in a non-sandbox environment!
     # See [templates/_configmap-bdns.tpl](templates/_configmap-bdns.tpl) for default value.
@@ -88,12 +90,12 @@ runner:
     pullPolicy: Always
     # -- Overrides the image tag whose default is the chart appVersion.
     # Default to v1.3.1
-    tag: "3.0.0-rc72"  # Note to developers: If you change this version also change appVersion in Chart.yaml
+    tag: "4.0.0"  # Note to developers: If you change this version also change appVersion in Chart.yaml
     # -- sha256 digest of the image.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "9cbcd1f1b92a021ae552e0df260d1f55c4e1d78d3c9b38ba73de7f60eba7c9fd"  # pragma: allowlist secret
+    sha: "b81a41ee0a9eb108b167fbcc5027f52ec8e3c3691af77cf1d47daeb2c5cd1530"  # pragma: allowlist secret
 
   # -- Annotations added to the runner pod
   podAnnotations: {}
@@ -182,12 +184,12 @@ builder:
     pullPolicy: Always
     # -- Image tag for the builder.
     # Default to v1.3.1
-    tag: "3.0.0-rc72"
+    tag: "4.0.0"
     # -- sha256 digest of the image for the builder.
     # Do not add the prefix "@sha256:"
     # Default to v1.3.1
     # <!-- # pragma: allowlist secret -->
-    sha: "0db603b7de1ac77838d4c4a0f3ae6809b3024ecc19938d4279b3d92598b6e362"  # pragma: allowlist secret
+    sha: "5ac4de463369b3165b2ec1620b09d07b34b8762fd74add9c17ef3781db507076"  # pragma: allowlist secret
 
   # -- Pod Security Context for the builder.
   # See [https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod)
@@ -439,6 +441,18 @@ ingress:
           # <br/>
           # Note: For Ingress Controllers like AWS LB Controller see their specific documentation.
           path: /leaflets/*
+          # -- The type of path. This value is required since Kubernetes 1.18.
+          # <br/>
+          # For Ingress Controllers like AWS LB Controller or Traefik it is usually required to set its value to ImplementationSpecific
+          # See [https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types](https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types)
+          # and [https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/](https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/)
+          pathType: ImplementationSpecific
+
+        -
+          # -- The Ingress Path. See [https://kubernetes.io/docs/concepts/services-networking/ingress/#examples](https://kubernetes.io/docs/concepts/services-networking/ingress/#examples)
+          # <br/>
+          # Note: For Ingress Controllers like AWS LB Controller see their specific documentation.
+          path: /metadata/*
           # -- The type of path. This value is required since Kubernetes 1.18.
           # <br/>
           # For Ingress Controllers like AWS LB Controller or Traefik it is usually required to set its value to ImplementationSpecific
