--- a/charts/epi/Chart.yaml
+++ b/charts/epi/Chart.yaml
@@ -16,11 +16,11 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 
-version: 0.7.9
 
+version: 0.7.11
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "3.0.0-rc28"
+appVersion: "4.0.0"
 
 icon: https://avatars.githubusercontent.com/u/60230259?s=200&v=4
