--- a/index.yaml
+++ b/index.yaml
@@ -2697,4 +2697,14 @@ entries:
     urls:
     - https://github.com/pharmaledgerassoc/helm-charts/releases/download/standalone-quorum-0.3.0/standalone-quorum-0.3.0.tgz
     version: 0.3.0
+  couchdb:
+  - apiVersion: v2
+    appVersion: 3.3.2
+    created: "2025-04-22T12:00:00Z"
+    description: A custom CouchDB Helm chart with user setup and secrets integration
+    name: couchdb
+    type: application
+    urls:
+    - https://github.com/PDMFCSA/helm-charts/releases/download/couchdb-custom-0.1.0/couchdb-custom-0.1.0.tgz
+    version: 0.1.0
 generated: "2025-04-08T09:10:19.093360875Z"
