--- a/.github/workflows/check-codeowners.yaml
+++ b/.github/workflows/check-codeowners.yaml
@@ -7,7 +7,7 @@ on: pull_request
 
 jobs:
   find-diffs:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Check if CODEOWNERS file is up to date with maintainers from helm chart(s)
 
     defaults:
