--- a/.github/workflows/chart_testing.yaml
+++ b/.github/workflows/chart_testing.yaml
@@ -10,7 +10,7 @@ jobs:
   chart-testing:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
+      - uses: actions/checkout@v4
         name: Checkout
         with:
           fetch-depth: 0
